<resources>
    <string name="app_name">QuizzApp</string>
    <string name="filler">…</string>
    <string name="buttonCrud">Słownik</string>
    <string name="buttonTests">Testy</string>
    <string name="testQuestion">Przetłumacz słowo</string>

    <string name= "difficultyLabel">Poziom trudności</string>
    <string name= "languageVersion">Wersja językowa</string>
    <string name= "modeLabel">Tryb</string>
    <string name= "autoIncrementDifficulty">Automatyczne zwiększanie trudności</string>
    <string name= "enableLogger">Czy zezwalasz na zbieranie informacji testowych?</string>
    <string name="title_activity_crud">Słownik</string>

    <string name="submit">Potwierdź</string>
    <string name="next_question">Dalej</string>
    <string name="add">Dodaj</string>

    <string name="word">Słowo</string>
    <string name="translation">Tłumaczenie</string>

    <string name="difficultyVeryEasy">Bardzo Łatwy</string>
    <string name="difficultyEasy">Łatwy</string>
    <string name="difficultyMedium">Średni</string>
    <string name="difficultyHard">Trudny</string>

    <string name="polishToEnglish">Polski -> Angielski</string>
    <string name="englishToPolish">English -> Polish</string>

    <string name="TestMode">Test</string>
    <string name="LearnMode">Nauka</string>

    <string name="endOfQuestions">Przejrzałeś już wszystkie pytania!</string>
    <plurals name="scoreMessage">
        <item quantity="one">Twój wynik: %d punkt"</item>
        <item quantity="few">Twój wynik: %d punkty</item>
        <item quantity="many">Twój wynik: %d punktów</item>
        <item quantity="other">Liczba punktów: %d</item>
    </plurals>

    <string-array name="translationChoice">
        <item>Polski -> Angielski</item>
        <item>English -> Polish</item>
    </string-array>



</resources>