<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DifficultySetActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:backgroundTint="#4CAF50"
            android:text="@string/difficultyEasy" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button6"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:backgroundTint="#CDDC39"
            android:text="@string/difficultyMedium" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button7"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:backgroundTint="#F44336"
            android:text="@string/difficultyHard" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>