<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditWordActivity">

    <Button
        android:id="@+id/editSubmit"
        android:layout_width="600px"
        android:layout_height="200px"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTranslationText" />

    <EditText
        android:id="@+id/editTranslationText"
        android:layout_width="600px"
        android:layout_height="200px"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/translation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editWordText" />



    <EditText
        android:id="@+id/editWordText"
        android:layout_width="600px"
        android:layout_height="200px"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>